# kafka-copy-rust

./: Cargo.toml  Dockerfile  build.rs
etc/: config.toml
protocol/: offsets.proto
src/: config.rs  main.rs
