[package]
name = "kafka-copy-rust"
version = "0.1.0"
authors = ["stx"]

[dependencies]
clap                 = "2.31.2"
clippy              = {version = "0.0.194", optional = true}
prost               = "0.3.2"
prost-types         = "0.3.2"
prost-derive        = "0.3.2"
bytes               = "0.4.6"
log                 = "0.4.1"
env_logger          = "0.5.7"
serde               = "1.0.38"
serde_derive        = "1.0.38"
toml                = "0.4.6"
rdkafka             = "0.15.0"
futures             = "^0.1.13"
futures-cpupool     = "^0.1.2"
tokio-core          = "^0.1.4"

[build-dependencies]
prost-build         = "0.3.2"
